Fix album player visibility

--- a/style.css
+++ b/style.css
@@ -1146,6 +1146,7 @@ footer {
     }
 }
 
-.albumtrack {
+/* Fix audio player */
+.mejs-inner {
     visibility: visible;
 }
